# PixelArt98

./: .gitignore  CMakeLists.txt  FEATURES.md  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: release.yml
cmake/: CheckListedSourceLineLimits.cmake  Dependencies.cmake  PixelArtVersion.hpp.in  VerifyDeployment.cmake
docs/: ANIMATION.md  COMPARISONS.md  OUR_PHILOSOPHY.md
res/: PixelArt98.icns  PixelArt98.rc  pixelart98.desktop
res/skyboxes/: SOURCES.md
scripts/: configure_memory_profile_build.sh  profile_blue_marble_memory.sh
src/core/: Document.cpp  Document.hpp  DocumentHistory.cpp  DocumentHistoryStorage.cpp  DocumentInternal.hpp  DocumentSelection.cpp  DocumentStructure.cpp  DocumentTransforms.cpp  DocumentTransforms.hpp  Filters.cpp  Filters.hpp  FiltersArtistic.cpp  FiltersBlur.cpp  FiltersCommon.cpp  FiltersCommon.hpp  FiltersDistort.cpp  GraphEffect.cpp  GraphEffect.hpp  GraphEffectEvaluator.cpp  GraphEffectSerialization.cpp  MemoryTrace.cpp  MemoryTrace.hpp  Model.cpp  Model.hpp  ModelUvUnwrap.cpp  Pixel.hpp  Svg.cpp  Svg.hpp  SvgRaster.cpp  Tools.cpp  Tools.hpp
src/depth/: DepthMapExtractor.cpp  DepthMapExtractor.hpp
src/depth/detail/: DepthMapPipeline.inc
src/io/: ProjectIO.cpp  ProjectIO.hpp
src/io/detail/: ProjectIODocumentJson.inc  ProjectIOModelCodecs.inc  ProjectIOModelFormats.inc  ProjectIOProjectOperations.inc  ProjectIORasterCodecs.inc  ProjectIORasterFormats.inc  ProjectIORecoveryCodecs.inc
src/platform/: NativeFileDialogProvider.cpp  NativeFileDialogProvider.hpp  main_glfw.cpp  main_qt.cpp  main_sdl.cpp
src/render/: GLCanvasTexture.cpp  GLCanvasTexture.hpp  GLTiledCanvasTexture.cpp  GLTiledCanvasTexture.hpp  GpuEffectRenderer.cpp  GpuEffectRenderer.hpp  MeshUvOverlayRenderer.cpp  MeshUvOverlayRenderer.hpp  MpsEffectRenderer.cpp  MpsEffectRenderer.hpp  MpsEffectRenderer.mm  Renderer3D.cpp  Renderer3D.hpp
src/render/detail/: GpuEffectShaders.inc  MpsEffectShader.inc  Renderer3DSceneGeometry.inc
src/ui/: AdjustmentWidgets.cpp  AdjustmentWidgets.hpp  AnimationExport.cpp  AnimationExport.hpp  AppSettings.cpp  AppSettings.hpp  CanvasViewport.hpp  EditorApp.cpp  EditorApp.hpp  EditorController.cpp  EditorController.hpp  EmbeddedAssets.cpp  EmbeddedAssets.hpp  EmbeddedTransformIcons.c  EmbeddedTransformIcons.h  FileDialogs.hpp  GraphEffectWidget.cpp  GraphEffectWidget.hpp  QtCanvasWidget.cpp  QtCanvasWidget.hpp  QtMainWindow.cpp  QtMainWindow.hpp  QtModelPreviewWidget.cpp  QtModelPreviewWidget.hpp  SplashScreen.cpp  SplashScreen.hpp  StartupSplash.cpp  StartupSplash.hpp  TextRasterizer.cpp  TextRasterizer.hpp
src/ui/details/: EmbeddedSplashPngData.inc  GraphEffectEditorStructure.inc  GraphEffectParameterInspector.inc  GraphEffectSceneWidgets.inc  GraphEffectWidgetFacade.inc  QtCanvasWidgetInteraction.inc  QtCanvasWidgetRendering.inc  QtMainWindowActionsAndCoreDocks.inc  QtMainWindowAdjustmentDialogsAndUpdates.inc  QtMainWindowAdjustmentsAndAuxiliaryDocks.inc  QtMainWindowAnimationAndModelIo.inc  QtMainWindowColorPanel.inc  QtMainWindowResizeTextAndEffectPreview.inc  QtMainWindowSettingsAndRecovery.inc  QtMainWindowUiHelpers.inc  QtMainWindowWorkspaceAndDocumentIo.inc
tests/: animation_export_tests.cpp  canvas_viewport_tests.cpp  core_advanced_tests.inc  core_tests.cpp  document_coverage_tests.cpp  editor_controller_tests.cpp  filter_coverage_tests.cpp  gpu_backend_benchmark.cpp  graph_effect_advanced_tests.inc  graph_effect_tests.cpp  graph_effect_ui_advanced_tests.inc  graph_effect_ui_tests.cpp  huge_image_memory_tests.cpp  io_roundtrip_tests.cpp  metal_shader_compile_tests.mm  mps_smoke.cpp  opengl_smoke.cpp  qt_mps_effects_e2e.cpp  qt_offscreen_gl.hpp  qt_ui_advanced_tests.inc  qt_ui_tests.cpp  shader_compile_tests.cpp  tools_coverage_tests.cpp
